<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />
    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/ic_baseline_search_24"
      />
    <item
        android:id="@+id/myProducts"
        android:title="@string/products"
        android:icon="@drawable/ic_baseline_add_shopping_cart_24"
       />
    <item
        android:id="@+id/offer"
        android:title="@string/offer"
        android:icon="@drawable/ic_baseline_local_offer_24"
        />

    <item
        android:id="@+id/account"
        android:title="@string/account"
        android:icon="@drawable/ic_user"
        />

</menu>