<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.e_commerce.ui.login.signin.SignInViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearTop_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/ic_vectorup">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TheShop"
                android:fontFamily="@font/hsishraq_bold"
                android:textSize="@dimen/_30ssp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/ic_logo"
                android:contentDescription="@string/appicon" />
        </LinearLayout>


        <TextView
            android:id="@+id/signInText_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/linearTop_signIn"
            app:layout_constraintBottom_toTopOf="@id/editTextEmail_signIn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in_to_your_account"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"

            />

        <EditText
            android:id="@+id/editTextEmail_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape1"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toBottomOf="@id/signInText_signIn"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword_signIn"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:hint="@string/email_address"
            android:paddingStart="@dimen/_8sdp"
            android:textSize="@dimen/_12ssp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/poppins_regular"
            android:text="@={viewModel._email}"
            />


        <EditText
            android:id="@+id/editTextPassword_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:background="@drawable/shape1"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toBottomOf="@id/editTextEmail_signIn"
            app:layout_constraintBottom_toTopOf="@id/forgetPassword_signIn"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_8sdp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textAlignment="viewStart"
            android:paddingEnd="@dimen/_5sdp"
            android:text="@={viewModel._password}"
            android:fontFamily="@font/poppins_regular" />

        <TextView
            android:id="@+id/forgetPassword_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/forgot_passwordQ"
            android:textSize="@dimen/_8ssp"
            android:textColor="@color/hintColor"
            canClickable="@{viewModel.states}"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword_signIn"
            app:layout_constraintEnd_toEndOf="parent" />


        <ProgressBar
            android:id="@+id/myProgress_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/signInButton_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            showOnLoading="@{viewModel.states}"
            android:indeterminate="true"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInButton_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/forgetPassword_signIn"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:onClick="@{() -> viewModel.signInFirebase()}"
            canClickable="@{viewModel.states}"
            android:background="@drawable/btnshape"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_bold"
            android:textAllCaps="false"

            />

        <TextView
            android:id="@+id/hintText_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/signInButton_signIn"
            app:layout_constraintBottom_toTopOf="@id/google_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/you_also_can_sign_in_with"
            android:textSize="@dimen/_13ssp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/hintColor"
            />

        <LinearLayout
            android:id="@+id/google_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/shape1"
            canClickable="@{viewModel.states}"
            app:layout_constraintTop_toBottomOf="@id/hintText_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            >

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_google_icon"
                android:layout_marginEnd="@dimen/_10sdp"
                android:scaleType="fitXY"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/orange"
                android:text="@string/google"
                android:textSize="@dimen/_10ssp"
                android:layout_gravity="center"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/google_signIn"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@id/vectordown_signIn">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_10ssp"
                android:text="@string/didn_t_hava_account_yet"
                android:textColor="@color/hintColor"
                android:fontFamily="@font/poppins_regular" />

            <TextView
                android:id="@+id/signUpTextView_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13ssp"
                android:text="@string/sign_up"
                canClickable="@{viewModel.states}"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_bold" />

            <View
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_1sdp"
                android:background="@color/green" />
        </LinearLayout>


        <ImageView
            android:id="@+id/vectordown_signIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:src="@drawable/ic_vectordown"
            android:scaleType="fitXY"
            android:contentDescription="@string/green_logo"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>