<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
      <variable
          name="viewModel"
          type="com.example.e_commerce.ui.login.forgetpassword.ForgetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.forgetpassword.ForgetPasswordFragment">

        <ImageView
            android:id="@+id/vectorAbove_forgetPassFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vectorup"
            android:scaleType="fitXY"
            android:contentDescription="@string/green_logo"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/forgot_passwordQ"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/vectorAbove_forgetPassFragment"
            app:layout_constraintBottom_toTopOf="@id/vectorDown_forgetPassFragment"
            android:layout_margin="@dimen/_20sdp"
            android:gravity="center">


            <EditText
                android:id="@+id/editTextEmail_forgetPassFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/shape1"
                android:textCursorDrawable="@null"
                app:layout_constraintTop_toBottomOf="@id/signInText_signIn"
                app:layout_constraintBottom_toTopOf="@id/editTextPassword_signIn"
                android:paddingEnd="@dimen/_5sdp"
                android:hint="@string/email_address"
                android:paddingStart="@dimen/_8sdp"
                android:textSize="@dimen/_12ssp"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:text="@={viewModel._email}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/backToHomeButton_forgetPassFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_37sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/btnshape"
                android:textSize="@dimen/_10ssp"
                android:onClick="@{() -> viewModel.receivePassword()}"
                android:text="@string/receive_password"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:textAllCaps="false"

                />


        </LinearLayout>


        <ImageView
            android:id="@+id/vectorDown_forgetPassFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vectordown"
            android:scaleType="fitXY"
            android:contentDescription="@string/green_logo"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>