<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
      <variable
          name="viewModel"
          type="com.example.e_commerce.ui.login.splash.SplashViewModel" />
    </data>
    <!--ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash_background"
        >
        <!--TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hsishraq_bold"
            android:textSize="@dimen/_30ssp"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableBottomCompat="@drawable/ic_logo" />
        <!--ProgressBar -->
        <ProgressBar
            android:id="@+id/myProgress_Splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linear_Splash"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            showOnLoading="@{viewModel.states}"
            android:indeterminate="true"
            android:visibility="gone"
            />
        <!--LinearLayout -->
        <LinearLayout
            android:id="@+id/linear_Splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:splitMotionEvents="false"
            android:visibility="gone">
            <!--AppCompatButton To Show SignInFragment -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn_Splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnshape"
                android:text="@string/sign_in"
                canClickable="@{viewModel.states}"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                />

            <!--AppCompatButton To Sign In Anonymous -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/explore_Splash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnshape2"
                android:text="@string/explore"
                android:textColor="@color/white"
                android:onClick="@{() -> viewModel.signInAnonymous()}"
                canClickable="@{viewModel.states}"
                android:textAllCaps="false"
                android:textSize="@dimen/_12ssp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/poppins_semibold"

                />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>